--- a/index.html
+++ b/index.html
@@ -11,3 +11,4 @@ title: The Common Sense Media Network
   <li><a href="investors.html">Common Sense Media's Investors</a></li>
 </ul>
 
+<p><em>This project was last updated on 25 February 2018</em></p>
